--- a/package.json
+++ b/package.json
@@ -1,107 +1,113 @@
 {
-    "name": "xymatic-task-front-end",
-    "version": "1.0.0",
-    "description": "Front End Implementation",
-    "main": "jest.config.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "clean": "rimraf ./build",
-        "dev": "yarn run clean && cross-env NODE_ENV=development webpack -w --config webpack.config.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Emik123dsa/xymatic-task-front-end.git"
-    },
-    "author": "Em1k",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Emik123dsa/xymatic-task-front-end/issues"
-    },
-    "homepage": "https://github.com/Emik123dsa/xymatic-task-front-end#readme",
-    "devDependencies": {
-        "@babel/core": "^7.12.8",
-        "@babel/plugin-proposal-class-properties": "^7.12.1",
-        "@babel/plugin-proposal-decorators": "^7.12.1",
-        "@babel/plugin-proposal-export-default-from": "^7.12.1",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-        "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-        "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-        "@babel/plugin-syntax-class-properties": "^7.12.1",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-        "@babel/plugin-transform-runtime": "^7.12.1",
-        "@babel/polyfill": "^7.12.1",
-        "@babel/preset-env": "^7.12.7",
-        "@babel/preset-react": "^7.12.7",
-        "autoprefixer": "^10.0.2",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.2.1",
-        "base64-inline-loader": "^1.1.1",
-        "bluebird": "^3.7.2",
-        "circular-dependency-plugin": "^5.2.2",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.3.2",
-        "cross-env": "^7.0.2",
-        "css-loader": "^5.0.1",
-        "eslint": "^7.14.0",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-loader": "^4.0.2",
-        "eslint-plugin-babel": "^5.3.1",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.1.3",
-        "eslint-plugin-react": "^7.21.5",
-        "eslint-webpack-plugin": "^2.4.0",
-        "file-loader": "^6.2.0",
-        "html-loader": "^1.3.2",
-        "html-webpack-plugin": "^4.5.0",
-        "img-loader": "^3.0.2",
-        "isomorphic-fetch": "^3.0.0",
-        "isomorphic-style-loader": "^5.1.0",
-        "jest": "^26.6.3",
-        "jest-cli": "^26.6.3",
-        "less-loader": "^7.1.0",
-        "lint-staged": "^10.5.2",
-        "node-sass": "^5.0.0",
-        "npm-run-all": "^4.1.5",
-        "path": "^0.12.7",
-        "postcss-cssnext": "^3.1.0",
-        "postcss-loader": "^4.1.0",
-        "postcss-nested": "^5.0.1",
-        "precss": "^4.0.0",
-        "progress-bar-webpack-plugin": "^2.1.0",
-        "qs": "^6.9.4",
-        "react-hot-loader": "^4.13.0",
-        "rimraf": "^3.0.2",
-        "sass-loader": "^10.1.0",
-        "style-loader": "^2.0.0",
-        "stylelint-webpack-plugin": "^2.1.1",
-        "terser-webpack-plugin": "^5.0.3",
-        "url-loader": "^4.1.1",
-        "webpack": "^5.6.0",
-        "webpack-cli": "^4.2.0",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-hot-middleware": "^2.25.0",
-        "webpack-merge": "^5.4.0",
-        "webpack-node-externals": "^2.5.2"
-    },
-    "dependencies": {
-        "connected-react-router": "^6.8.0",
-        "immutable": "^4.0.0-rc.12",
-        "prop-types": "^15.7.2",
-        "react": "^17.0.1",
-        "react-cookie": "^4.0.3",
-        "react-dom": "^17.0.1",
-        "react-router": "^5.2.0",
-        "react-router-config": "^5.1.1",
-        "react-router-dom": "^5.2.0",
-        "react-thunk": "^1.0.0",
-        "redux": "^4.0.5",
-        "redux-actions": "^2.6.5",
-        "redux-connect": "^10.0.0",
-        "redux-immutable": "^4.0.0",
-        "redux-saga": "^1.1.3",
-        "redux-thunk": "^2.3.0",
-        "stylelint": "^13.8.0",
-        "stylelint-config-standard": "^20.0.0"
-    }
+  "name": "xymatic-task-front-end",
+  "version": "1.0.0",
+  "description": "Front End Implementation",
+  "main": "jest.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf ./build",
+    "dev": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 webpack -w --config webpack.config.js",
+    "hmr": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 node ./server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Emik123dsa/xymatic-task-front-end.git"
+  },
+  "author": "Em1k",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Emik123dsa/xymatic-task-front-end/issues"
+  },
+  "homepage": "https://github.com/Emik123dsa/xymatic-task-front-end#readme",
+  "devDependencies": {
+    "@babel/core": "^7.12.8",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/plugin-syntax-class-properties": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "autoprefixer": "^10.0.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.1",
+    "base64-inline-loader": "^1.1.1",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "circular-dependency-plugin": "^5.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "cookie-parser": "^1.4.5",
+    "copy-webpack-plugin": "^6.3.2",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-webpack-plugin": "^2.4.0",
+    "express": "^4.17.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^5.0.0-alpha.6",
+    "img-loader": "^3.0.2",
+    "isomorphic-fetch": "^3.0.0",
+    "isomorphic-style-loader": "^5.1.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "less-loader": "^7.1.0",
+    "lint-staged": "^10.5.2",
+    "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
+    "postcss": "^8.1.10",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-nested": "^5.0.1",
+    "precss": "^4.0.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "qs": "^6.9.4",
+    "rimraf": "^3.0.2",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "terser-webpack-plugin": "^5.0.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.4.0",
+    "webpack-node-externals": "^2.5.2"
+  },
+  "dependencies": {
+    "@hot-loader/react-dom": "^17.0.0",
+    "connected-react-router": "^6.8.0",
+    "immutable": "^4.0.0-rc.12",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-connect": "^10.0.0",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0"
+  }
 }
