--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,12 +18,26 @@
     "class-methods-use-this": 0,
     "no-console": 0,
     "no-unused-vars": 1,
-    "babel/semi": 1
+    "babel/semi": 1,
+    "no-underscore-dangle": 0,
+    "operator-linebreak": 0,
+    "implicit-arrow-linebreak": 0,
+    "import/prefer-default-export": 0,
+    "function-paren-newline": 0
   },
   "parser": "babel-eslint",
   "settings": {
     "react": {
       "version": "17.0.1"
+    },
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["~", "./src"],
+          ["@", "./src/app"]
+        ],
+        "extensions": [".ts", ".js", ".jsx", ".json"]
+      }
     }
   }
 }
