--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./build",
+    "fix": "eslint --fix --config=./.eslintrc.json **/*.jsx",
     "dev": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 webpack -w --config webpack.config.js",
-    "hmr": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 node ./server.js"
+    "hmr": "cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@loadable/babel-plugin": "^5.13.2",
     "autoprefixer": "^10.0.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
@@ -48,6 +50,7 @@
     "css-loader": "^5.0.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
@@ -59,24 +62,24 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.6",
     "img-loader": "^3.0.2",
-    "isomorphic-fetch": "^3.0.0",
-    "isomorphic-style-loader": "^5.1.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.2",
     "node-sass": "^5.0.0",
+    "normalize.scss": "^0.1.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "postcss": "^8.1.10",
     "postcss-cssnext": "^3.1.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^4.1.0",
     "postcss-nested": "^5.0.1",
+    "postcss-scss": "^3.0.4",
     "precss": "^4.0.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "qs": "^6.9.4",
     "rimraf": "^3.0.2",
     "sass-loader": "^10.1.0",
+    "sass-resources-loader": "^2.1.1",
     "style-loader": "^2.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "terser-webpack-plugin": "^5.0.3",
@@ -90,13 +93,23 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.0",
+    "@loadable/component": "^5.14.1",
     "connected-react-router": "^6.8.0",
+    "history": "^4.1.0",
     "immutable": "^4.0.0-rc.12",
+    "isomorphic-fetch": "^3.0.0",
+    "isomorphic-style-loader": "^5.1.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "moment": "^2.29.1",
+    "p-min-delay": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
@@ -104,9 +117,15 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-connect": "^10.0.0",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-dock-monitor": "^1.2.0",
+    "redux-devtools-log-monitor": "^2.1.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^1.1.3",
+    "redux-slider-monitor": "^2.0.0-3",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "rxjs": "^6.6.3",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0"
   }
