--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.0",
     "@loadable/component": "^5.14.1",
+    "@redux-saga/simple-saga-monitor": "^1.1.2",
     "connected-react-router": "^6.8.0",
     "history": "^4.1.0",
     "immutable": "^4.0.0-rc.12",
@@ -121,6 +122,7 @@
     "redux-devtools-dock-monitor": "^1.2.0",
     "redux-devtools-log-monitor": "^2.1.0",
     "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-slider-monitor": "^2.0.0-3",
     "redux-thunk": "^2.3.0",
