--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-thunk": "^1.0.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-connect": "^10.0.0",
