--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf ./build",
     "fix": "eslint --fix --config=./.eslintrc.json **/*.jsx",
     "dev": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 webpack -w --config webpack.config.js",
-    "hmr": "cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 node ./server.js"
+    "hmr": "cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 NODE_HOST=127.0.0.1 node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -95,8 +95,9 @@
     "@hot-loader/react-dom": "^17.0.0",
     "@loadable/component": "^5.14.1",
     "@redux-saga/simple-saga-monitor": "^1.1.2",
+    "chalk": "^4.1.0",
     "connected-react-router": "^6.8.0",
-    "history": "^4.1.0",
+    "history": "4.7.0",
     "immutable": "^4.0.0-rc.12",
     "isomorphic-fetch": "^3.0.0",
     "isomorphic-style-loader": "^5.1.0",
