--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.9",
     "@babel/eslint-plugin": "^7.12.1",
     "@hot-loader/react-dom": "^17.0.0",
     "@loadable/component": "^5.14.1",
@@ -101,12 +100,15 @@
     "connected-react-router": "^6.8.0",
     "graphql": "^15.4.0",
     "history": "4.7.0",
+    "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "isomorphic-fetch": "^3.0.0",
     "isomorphic-style-loader": "^5.1.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "normalizr": "^3.6.1",
     "p-min-delay": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
