--- a/package.json
+++ b/package.json
@@ -96,9 +96,18 @@
     "@hot-loader/react-dom": "^17.0.0",
     "@loadable/component": "^5.14.1",
     "@redux-saga/simple-saga-monitor": "^1.1.2",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "chalk": "^4.1.0",
     "connected-react-router": "^6.8.0",
     "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "history": "4.7.0",
     "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
@@ -112,6 +121,7 @@
     "p-min-delay": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -136,6 +146,7 @@
     "reselect": "^4.0.0",
     "rxjs": "^6.6.3",
     "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0"
+    "stylelint-config-standard": "^20.0.0",
+    "subscriptions-transport-ws": "^0.9.18"
   }
 }
