--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "connected-react-router": "^6.8.0",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
+    "graphql-ws": "^2.0.0",
     "history": "4.7.0",
     "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
