--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-thunk": "^1.0.0",
-    "recharts": "^1.8.5",
+    "recharts": "2.0.0-beta.7",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-connect": "^10.0.0",
