--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
     "operator-linebreak": 0,
     "implicit-arrow-linebreak": 0,
     "import/prefer-default-export": 0,
-    "function-paren-newline": 0
+    "function-paren-newline": 0,
+    "object-curly-newline": 0
   },
   "parser": "@babel/eslint-parser",
   "settings": {
