--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@hot-loader/react-dom": "^17.0.0",
     "@loadable/component": "^5.14.1",
     "@redux-saga/simple-saga-monitor": "^1.1.2",
+    "animate.css": "^4.1.1",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -107,6 +108,7 @@
     "apollo-utilities": "^1.3.4",
     "chalk": "^4.1.0",
     "connected-react-router": "^6.8.0",
+    "dom-helpers": "^5.2.0",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "graphql-ws": "^2.0.0",
@@ -124,6 +126,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
+    "react-content-loader": "^5.1.4",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -133,6 +136,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-thunk": "^1.0.0",
+    "react-transition-group": "2.7.0",
     "recharts": "2.0.0-beta.7",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
