--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@loadable/component": "^5.14.1",
     "@redux-saga/simple-saga-monitor": "^1.1.2",
     "animate.css": "^4.1.1",
+    "aphrodite": "^2.4.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -125,6 +126,7 @@
     "p-min-delay": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-animations": "^1.0.0",
     "react-apollo": "^3.1.5",
     "react-content-loader": "^5.1.4",
     "react-cookie": "^4.0.3",
@@ -136,7 +138,6 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-thunk": "^1.0.0",
-    "react-transition-group": "2.7.0",
     "recharts": "2.0.0-beta.7",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
