--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "img-loader": "^3.0.2",
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.2",
+    "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "normalize.scss": "^0.1.0",
     "npm-run-all": "^4.1.5",
@@ -120,6 +121,7 @@
     "isomorphic-style-loader": "^5.1.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "normalizr": "^3.6.1",
@@ -138,6 +140,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-thunk": "^1.0.0",
+    "react-toastify": "^6.2.0",
     "recharts": "2.0.0-beta.7",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
