--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
         "legacy": true
       }
     ],
+    "@babel/plugin-proposal-private-methods",
     "@babel/plugin-proposal-nullish-coalescing-operator",
     "@babel/plugin-proposal-optional-chaining",
     "@babel/plugin-transform-runtime",
