--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/plugin-proposal-private-methods": "^7.12.1",
     "@babel/plugin-syntax-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
@@ -122,6 +123,7 @@
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "normalizr": "^3.6.1",
