--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "react-router-dom": "^5.2.0",
     "react-thunk": "^1.0.0",
     "react-toastify": "^6.2.0",
+    "react-transition-group": "^4.4.1",
     "recharts": "2.0.0-beta.7",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
@@ -152,6 +153,7 @@
     "redux-devtools-log-monitor": "^2.1.0",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-named-reducers": "^1.1.0",
     "redux-saga": "^1.1.3",
     "redux-slider-monitor": "^2.0.0-3",
     "redux-thunk": "^2.3.0",
