--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
       "@babel/plugin-proposal-decorators",
       {
         "legacy": true
-      }
+      },
+      "lodash"
     ],
     "@babel/plugin-proposal-private-methods",
     "@babel/plugin-proposal-nullish-coalescing-operator",
