--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,7 @@
           ["@styles", "./src/assets/styles"],
           ["@img", "./src/assets/img"]
         ],
-        "extensions": [".ts", ".js", ".jsx", ".json"]
+        "extensions": [".js", ".jsx", ".json"]
       }
     }
   }
