--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "clean": "rimraf ./build",
     "fix": "eslint --fix --config=./.eslintrc.json **/*/*.jsx",
     "dev": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 webpack -w --config webpack.config.js",
-    "build": "yarn run clean && cross-env NODE_ENV=production NODE_HMR=false NODE_PORT=4200 webpack --config webpack.config.js",
-    "hmr": "cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 NODE_HOST=127.0.0.1 node ./server.js"
+    "build": "yarn run clean && cross-env NODE_ENV=production NODE_HMR=false NODE_PORT=4200 webpack --mode=production --config webpack.config.js",
+    "hmr": "cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 NODE_HOST=127.0.0.1 node ./server.js",
+    "start": "cross-env NODE_ENV=production NODE_HMR=false NODE_PORT=3000 NODE_HOST=127.0.0.1 node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,8 @@
     "@loadable/babel-plugin": "^5.13.2",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-react-optimize": "^1.0.1",
     "base64-inline-loader": "^1.1.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -50,6 +53,7 @@
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
+    "cssnano": "^4.1.10",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -67,9 +71,11 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.2",
     "mini-css-extract-plugin": "^1.3.3",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "node-sass": "^5.0.0",
     "normalize.scss": "^0.1.0",
     "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "^0.12.7",
     "postcss": "^8.1.10",
     "postcss-cssnext": "^3.1.0",
@@ -88,6 +94,7 @@
     "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.6.0",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
@@ -111,6 +118,7 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
     "chalk": "^4.1.0",
+    "compression-webpack-plugin": "^7.1.2",
     "connected-react-router": "^6.8.0",
     "dom-helpers": "^5.2.0",
     "graphql": "^15.4.0",
@@ -126,6 +134,7 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
+    "lodash-webpack-plugin": "^0.11.6",
     "moment": "^2.29.1",
     "normalizr": "^3.6.1",
     "p-min-delay": "^3.1.0",
@@ -165,5 +174,9 @@
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "subscriptions-transport-ws": "^0.9.18"
-  }
+  },
+  "sideEffects": [
+    "**/*.css",
+    "**/*.scss"
+  ]
 }
