--- a/package.json
+++ b/package.json
@@ -56,11 +56,14 @@
     "cssnano": "^4.1.10",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-webpack-plugin": "^2.4.0",
     "express": "^4.17.1",
@@ -84,6 +87,7 @@
     "postcss-nested": "^5.0.1",
     "postcss-scss": "^3.0.4",
     "precss": "^4.0.0",
+    "prettier": "^2.2.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "qs": "^6.9.4",
     "rimraf": "^3.0.2",
@@ -178,5 +182,10 @@
   "sideEffects": [
     "**/*.css",
     "**/*.scss"
-  ]
+  ],
+  "lint-staged": {
+    "*.(css|scss)": [
+      "stylelint --fix"
+    ]
+  }
 }
