--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,12 @@
     "browser": true
   },
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "linebreak-style": 0,
     "class-methods-use-this": 0,
     "no-console": 0,
@@ -26,8 +32,7 @@
     "implicit-arrow-linebreak": 0,
     "import/prefer-default-export": 0,
     "function-paren-newline": 0,
-    "object-curly-newline": 0,
-    "prettier/prettier": 2
+    "object-curly-newline": 0
   },
   "parser": "@babel/eslint-parser",
   "settings": {
