--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "react-apollo": "^3.1.5",
     "react-content-loader": "^5.1.4",
     "react-cookie": "^4.0.3",
+    "react-countup": "^4.3.3",
     "react-date-picker": "^8.0.5",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
