--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./build",
     "fix": "eslint --fix --config=./.eslintrc.json **/*/*.jsx",
-    "dev": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 webpack -w --config webpack.config.js",
+    "dev": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 webpack serve --config webpack.config.js",
     "build": "yarn run clean && cross-env NODE_ENV=production NODE_HMR=false NODE_PORT=4200 webpack --mode=production --config webpack.config.js",
     "hmr": "cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 NODE_HOST=127.0.0.1 node ./server.js",
     "start": "cross-env NODE_ENV=production NODE_HMR=false NODE_PORT=3000 NODE_HOST=127.0.0.1 node ./server.js"
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-optimize": "^1.0.1",
     "base64-inline-loader": "^1.1.1",
     "bluebird": "^3.7.2",
@@ -88,7 +89,6 @@
     "postcss-scss": "^3.0.4",
     "precss": "^4.0.0",
     "prettier": "^2.2.1",
-    "progress-bar-webpack-plugin": "^2.1.0",
     "qs": "^6.9.4",
     "rimraf": "^3.0.2",
     "sass-loader": "^10.1.0",
@@ -103,7 +103,8 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.4.0",
-    "webpack-node-externals": "^2.5.2"
+    "webpack-node-externals": "^2.5.2",
+    "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "@babel/eslint-plugin": "^7.12.1",
