--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./build",
+    "lint:staged": "lint-staged --relative",
     "fix": "eslint --fix --config=./.eslintrc.json **/*/*.jsx",
     "dev": "yarn run clean && cross-env NODE_ENV=development NODE_HMR=true NODE_PORT=3000 webpack serve --config webpack.config.js",
     "build": "yarn run clean && cross-env NODE_ENV=production NODE_HMR=false NODE_PORT=4200 webpack --mode=production --config webpack.config.js",
@@ -39,6 +40,8 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@loadable/babel-plugin": "^5.13.2",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
@@ -71,6 +74,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.6",
+    "husky": "^4.3.8",
     "img-loader": "^3.0.2",
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.2",
@@ -188,6 +192,10 @@
   "lint-staged": {
     "*.(css|scss)": [
       "stylelint --fix"
+    ],
+    "*.(js|jsx)": [
+      "prettier --write --config .prettierrc.json",
+      "eslint --fix --config=./.eslintrc.json **/*/*.jsx"
     ]
   }
 }
