--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "jest.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "husky install .husky",
     "clean": "rimraf ./build",
     "lint:staged": "lint-staged --relative",
     "fix": "eslint --fix --config=./.eslintrc.json **/*/*.jsx",
@@ -74,7 +75,6 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.6",
-    "husky": "^4.3.8",
     "img-loader": "^3.0.2",
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.2",
@@ -135,6 +135,7 @@
     "graphql-ws": "^2.0.0",
     "history": "4.7.0",
     "humps": "^2.0.1",
+    "husky": "^5.0.8",
     "immutable": "^4.0.0-rc.12",
     "isomorphic-fetch": "^3.0.0",
     "isomorphic-style-loader": "^5.1.0",
